cd/todomvc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-mvc
  name: todo-mvc-srv
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: todo-mvc
  type: ClusterIP
