cd/todomvc/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-mvc-ingress
  labels:
    app: todo-mvc
spec:
  rules:
  - host: kube.local
    http:
      paths:
      - backend:
          service:
            name: todo-mvc-srv
            port:
              number: 80
        path: /
        pathType: Prefix
